// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topbar renders the topbar for mobile and the child have the expected router 1`] = `
<div
  class="pho-content-header"
>
  <div
    class="u-flex u-flex-items-center CozyTheme--normal"
  >
    <div
      class="pho-content-album-previous"
      data-testid="pho-content-album-previous"
      role="button"
    />
  </div>
  <div
    class="u-flex u-flex-items-center u-ellipsis CozyTheme--normal"
  >
    <h2
      class="pho-content-title"
      data-testid="pho-content-title"
    />
  </div>
  <div
    class="u-flex u-flex-items-center CozyTheme--normal"
  >
    <div
      router="[object Object]"
    >
       Child 
    </div>
  </div>
</div>
`;

exports[`Topbar should render the topbar for desktop 1`] = `
<div
  class="pho-content-header"
>
  <div
    class="pho-content-album-previous"
    data-testid="pho-content-album-previous"
    role="button"
  />
  <h2
    class="pho-content-title"
    data-testid="pho-content-title"
  />
  <div
    router="[object Object]"
  >
     Child 
  </div>
</div>
`;
